# nginx-log-analyzer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.json  eg  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
.github/worklows/: ci.yaml
src/log_analyzer/: log_analyzer.py  main.py
tests/: test_log_analyzer.py
